# messageApp

./: .gitignore  ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  Main.qml  MainWindow.qml  appmessageapp_qmltyperegistrations.cpp  main.cpp  mathlib.cpp  mathlib.h
Contacts/: ContactsView.qml
Contacts/Components/: Background.qml  ContactDeligate.qml  ContactList.qml  Header.qml
OpenedChat/: OpenedChatView.qml
OpenedChat/Components/: ChatBubble.qml  ChatHeader.qml  ChatInput.qml  ChatThread.qml
User/: Chat.cpp  Chat.h  ChatList.cpp  ChatList.h  Message.cpp  User.cpp  User.h  UserList.cpp  UserList.h
core/: FileWatcher.h
